objects/smlfcom__SML_Store__c.object
<CustomObject>
    <fields>
        <fullName>smlfcom__AmountValue__c</fullName>
        <label>AmountValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Avg_days_to_close__c</fullName>
        <label>Avg days to close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Avg_deal_amount__c</fullName>
        <label>Avg deal amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SML_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smlfcom__Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__DateValue__c</fullName>
        <description>This field is to be deleted.</description>
        <label>Dont Use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__Date__c</fullName>
        <description>This field is created for generic trending line charts screen.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dim_Type__c</fullName>
        <label>Dim Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dim_Value__c</fullName>
        <label>Dim Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_1__c</fullName>
        <label>Dimension-1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_2__c</fullName>
        <label>Dimension-2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_3__c</fullName>
        <label>Dimension-3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Endpoint_parameters__c</fullName>
        <label>Endpoint parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Forecast_Type__c</fullName>
        <label>Forecast Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Dates__c</fullName>
        <label>Insight Chart Dates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Dimensions__c</fullName>
        <label>Insight Chart Dimensions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Measures__c</fullName>
        <label>Insight Chart Measures</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Name__c</fullName>
        <label>Insight Chart Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Chart_Objects__c</fullName>
        <label>Insight Chart Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Dimension__c</fullName>
        <label>User Dimension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_HTML__c</fullName>
        <label>Insight HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Image_Location__c</fullName>
        <label>Insight Image Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Measure_Value__c</fullName>
        <label>Insight Measure Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Message__c</fullName>
        <label>Insight Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Placement__c</fullName>
        <label>Insight Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Insight_Title__c</fullName>
        <label>Insight Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Load__c</fullName>
        <label>Load</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Full file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Metric_1__c</fullName>
        <label>Metric-1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric_2__c</fullName>
        <label>Metric-2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notify_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notify_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notify_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumDaysIn__c</fullName>
        <label>NumDaysIn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Num_of_opps__c</fullName>
        <label>Num of opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Num_sales_reps__c</fullName>
        <label>Num sales reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>smlfcom__Object_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This Year</fullName>
                </value>
                <value>
                    <fullName>Last Year</fullName>
                </value>
                <value>
                    <fullName>Previous History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Request_Details__c</fullName>
        <label>Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Action__c</fullName>
        <label>Rule Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Desc__c</fullName>
        <label>Rule Desc</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Id__c</fullName>
        <label>Rule Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule__c</fullName>
        <label>Rule</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Stage__c</fullName>
        <label>Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>Zuora</fullName>
                </value>
                <value>
                    <fullName>Aria</fullName>
                </value>
                <value>
                    <fullName>Netsuite</fullName>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Text1__c</fullName>
        <label>Text1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Text2__c</fullName>
        <label>Text2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Text3__c</fullName>
        <label>Text3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Timing_Picklist_2__c</fullName>
        <label>Timing Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 hrs</fullName>
                </value>
                <value>
                    <fullName>2 hrs</fullName>
                </value>
                <value>
                    <fullName>3 hrs</fullName>
                </value>
                <value>
                    <fullName>4 hrs</fullName>
                </value>
                <value>
                    <fullName>5 hrs</fullName>
                </value>
                <value>
                    <fullName>6 hrs</fullName>
                </value>
                <value>
                    <fullName>7 hrs</fullName>
                </value>
                <value>
                    <fullName>8 hrs</fullName>
                </value>
                <value>
                    <fullName>9 hrs</fullName>
                </value>
                <value>
                    <fullName>10 hrs</fullName>
                </value>
                <value>
                    <fullName>11 hrs</fullName>
                </value>
                <value>
                    <fullName>12 hrs</fullName>
                </value>
                <value>
                    <fullName>13 hrs</fullName>
                </value>
                <value>
                    <fullName>14 hrs</fullName>
                </value>
                <value>
                    <fullName>15 hrs</fullName>
                </value>
                <value>
                    <fullName>16 hrs</fullName>
                </value>
                <value>
                    <fullName>17 hrs</fullName>
                </value>
                <value>
                    <fullName>18 hrs</fullName>
                </value>
                <value>
                    <fullName>19 hrs</fullName>
                </value>
                <value>
                    <fullName>20 hrs</fullName>
                </value>
                <value>
                    <fullName>21 hrs</fullName>
                </value>
                <value>
                    <fullName>22 hrs</fullName>
                </value>
                <value>
                    <fullName>23 hrs</fullName>
                </value>
                <value>
                    <fullName>24 hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Timing__c</fullName>
        <label>Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push To Wave</fullName>
                </value>
                <value>
                    <fullName>Snapshot</fullName>
                </value>
                <value>
                    <fullName>Push To Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__View_Type__c</fullName>
        <label>View Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>Matched_Rules</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
                <value>
                    <fullName>Data_Sources</fullName>
                </value>
                <value>
                    <fullName>Forecast_Metadata</fullName>
                </value>
                <value>
                    <fullName>SummaryInsights</fullName>
                </value>
                <value>
                    <fullName>custom_trendline</fullName>
                </value>
                <value>
                    <fullName>Insights_Messages</fullName>
                </value>
                <value>
                    <fullName>Insight_charts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__WinningActivityCountDetails__c</fullName>
        <label>WinningActivityCountDetails</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__linear_regression_formula__c</fullName>
        <label>linear regression formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__percent_wins__c</fullName>
        <label>percent wins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__sftp_password__c</fullName>
        <label>sftp-password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__sftp_username__c</fullName>
        <label>sftp-username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SML Store</label>
    <listViews>
        <fullName>smlfcom__All_Rule</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__View_Type__c</columns>
        <columns>smlfcom__Rule_Desc__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smlfcom__Insight_Message__c</columns>
        <columns>smlfcom__Insight_Placement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>Insight_charts,Insights_Messages</value>
        </filters>
        <label>All | Rule</label>
    </listViews>
    <listViews>
        <fullName>smlfcom__Forecast</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__Date_Value__c</columns>
        <columns>smlfcom__Dim_Type__c</columns>
        <columns>smlfcom__Dim_Value__c</columns>
        <columns>smlfcom__Is_Test_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <label>Forecast</label>
    </listViews>
    <listViews>
        <fullName>smlfcom__Landing_Text</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__View_Type__c</columns>
        <columns>smlfcom__Text1__c</columns>
        <columns>smlfcom__Text2__c</columns>
        <columns>smlfcom__Text3__c</columns>
        <columns>smlfcom__Text4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>SummaryInsights</value>
        </filters>
        <label>Landing Text</label>
    </listViews>
    <nameField>
        <displayFormat>SML-SN-{0}</displayFormat>
        <label>SML Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SML Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>